--- a/less/projects.style.less
+++ b/less/projects.style.less
@@ -113,7 +113,7 @@ main {
             }
 
             #project1-mobile-display {
-                background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url("../imgs/project1_img.jpg");
+                background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url("../imgs/project1_img.png");
                 width: 100%;
                 height: 225px;
                 background-position: center;
